--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "target": "ES2021",
-    "sourceMap": true,
+    "sourceMap": false,
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
@@ -23,6 +23,12 @@
       ],
       "@app/account/*": [
         "libs/account/src/*"
+      ],
+      "@app/order": [
+        "libs/order/src"
+      ],
+      "@app/order/*": [
+        "libs/order/src/*"
       ]
     }
   }
