--- a/libs/account/package.json
+++ b/libs/account/package.json
@@ -19,7 +19,10 @@
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/typescript": "^4.0.6",
     "@graphql-codegen/typescript-resolvers": "^4.0.6",
-    "@nestjs/swagger": "^7.3.1"
+    "@graphql-yoga/nestjs": "^3.10.3",
+    "@nestjs/swagger": "^7.3.1",
+    "graphql": "^16.9.0",
+    "graphql-yoga": "^5.10.3"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
